// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSpotShape > autofill > token0 > case #1 1`] = `
{
  "-1": [
    0n,
    0n,
  ],
  "0": [
    47n,
    0n,
  ],
  "1": [
    999999952n,
    0n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > left side of active bin > excluding active bin 1`] = `
{
  "219": [
    0n,
    76923076n,
  ],
  "220": [
    0n,
    76923076n,
  ],
  "221": [
    0n,
    76923076n,
  ],
  "222": [
    0n,
    76923076n,
  ],
  "223": [
    0n,
    76923076n,
  ],
  "224": [
    0n,
    76923076n,
  ],
  "225": [
    0n,
    76923076n,
  ],
  "226": [
    0n,
    76923076n,
  ],
  "227": [
    0n,
    76923076n,
  ],
  "228": [
    0n,
    76923076n,
  ],
  "229": [
    0n,
    76923076n,
  ],
  "230": [
    0n,
    76923076n,
  ],
  "231": [
    0n,
    76923076n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > left side of active bin > ignore tokens from right side 1`] = `
{
  "219": [
    0n,
    76923076n,
  ],
  "220": [
    0n,
    76923076n,
  ],
  "221": [
    0n,
    76923076n,
  ],
  "222": [
    0n,
    76923076n,
  ],
  "223": [
    0n,
    76923076n,
  ],
  "224": [
    0n,
    76923076n,
  ],
  "225": [
    0n,
    76923076n,
  ],
  "226": [
    0n,
    76923076n,
  ],
  "227": [
    0n,
    76923076n,
  ],
  "228": [
    0n,
    76923076n,
  ],
  "229": [
    0n,
    76923076n,
  ],
  "230": [
    0n,
    76923076n,
  ],
  "231": [
    0n,
    76923076n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > left side of active bin > including active bin 1`] = `
{
  "221": [
    0n,
    0n,
  ],
  "222": [
    0n,
    0n,
  ],
  "223": [
    0n,
    0n,
  ],
  "224": [
    0n,
    0n,
  ],
  "225": [
    0n,
    0n,
  ],
  "226": [
    0n,
    0n,
  ],
  "227": [
    0n,
    0n,
  ],
  "228": [
    0n,
    0n,
  ],
  "229": [
    0n,
    0n,
  ],
  "230": [
    0n,
    0n,
  ],
  "231": [
    0n,
    0n,
  ],
  "232": [
    281117010n,
    999999999n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "-1": [
    0n,
    100000000n,
  ],
  "-10": [
    0n,
    100000000n,
  ],
  "-2": [
    0n,
    100000000n,
  ],
  "-3": [
    0n,
    100000000n,
  ],
  "-4": [
    0n,
    100000000n,
  ],
  "-5": [
    0n,
    100000000n,
  ],
  "-6": [
    0n,
    100000000n,
  ],
  "-7": [
    0n,
    100000000n,
  ],
  "-8": [
    0n,
    100000000n,
  ],
  "-9": [
    0n,
    100000000n,
  ],
  "0": [
    90909090n,
    0n,
  ],
  "1": [
    90909090n,
    0n,
  ],
  "10": [
    90909090n,
    0n,
  ],
  "2": [
    90909090n,
    0n,
  ],
  "3": [
    90909090n,
    0n,
  ],
  "4": [
    90909090n,
    0n,
  ],
  "5": [
    90909090n,
    0n,
  ],
  "6": [
    90909090n,
    0n,
  ],
  "7": [
    90909090n,
    0n,
  ],
  "8": [
    90909090n,
    0n,
  ],
  "9": [
    90909090n,
    0n,
  ],
}
`;

exports[`createSpotShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "225": [
    0n,
    94274103n,
  ],
  "226": [
    0n,
    94274103n,
  ],
  "227": [
    0n,
    94274103n,
  ],
  "228": [
    0n,
    94274103n,
  ],
  "229": [
    0n,
    94274103n,
  ],
  "230": [
    0n,
    94274103n,
  ],
  "231": [
    0n,
    94274103n,
  ],
  "232": [
    95602630n,
    340081272n,
  ],
  "233": [
    129199624n,
    0n,
  ],
  "234": [
    129199624n,
    0n,
  ],
  "235": [
    129199624n,
    0n,
  ],
  "236": [
    129199624n,
    0n,
  ],
  "237": [
    129199624n,
    0n,
  ],
  "238": [
    129199624n,
    0n,
  ],
  "239": [
    129199624n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    55555555n,
    0n,
  ],
  "234": [
    55555555n,
    0n,
  ],
  "235": [
    55555555n,
    0n,
  ],
  "236": [
    55555555n,
    0n,
  ],
  "237": [
    55555555n,
    0n,
  ],
  "238": [
    55555555n,
    0n,
  ],
  "239": [
    55555555n,
    0n,
  ],
  "240": [
    55555555n,
    0n,
  ],
  "241": [
    55555555n,
    0n,
  ],
  "242": [
    55555555n,
    0n,
  ],
  "243": [
    55555555n,
    0n,
  ],
  "244": [
    55555555n,
    0n,
  ],
  "245": [
    55555555n,
    0n,
  ],
  "246": [
    55555555n,
    0n,
  ],
  "247": [
    55555555n,
    0n,
  ],
  "248": [
    55555555n,
    0n,
  ],
  "249": [
    55555555n,
    0n,
  ],
  "250": [
    55555555n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    55555555n,
    0n,
  ],
  "234": [
    55555555n,
    0n,
  ],
  "235": [
    55555555n,
    0n,
  ],
  "236": [
    55555555n,
    0n,
  ],
  "237": [
    55555555n,
    0n,
  ],
  "238": [
    55555555n,
    0n,
  ],
  "239": [
    55555555n,
    0n,
  ],
  "240": [
    55555555n,
    0n,
  ],
  "241": [
    55555555n,
    0n,
  ],
  "242": [
    55555555n,
    0n,
  ],
  "243": [
    55555555n,
    0n,
  ],
  "244": [
    55555555n,
    0n,
  ],
  "245": [
    55555555n,
    0n,
  ],
  "246": [
    55555555n,
    0n,
  ],
  "247": [
    55555555n,
    0n,
  ],
  "248": [
    55555555n,
    0n,
  ],
  "249": [
    55555555n,
    0n,
  ],
  "250": [
    55555555n,
    0n,
  ],
}
`;

exports[`createSpotShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    281117010n,
    999999999n,
  ],
  "233": [
    39937943n,
    0n,
  ],
  "234": [
    39937943n,
    0n,
  ],
  "235": [
    39937943n,
    0n,
  ],
  "236": [
    39937943n,
    0n,
  ],
  "237": [
    39937943n,
    0n,
  ],
  "238": [
    39937943n,
    0n,
  ],
  "239": [
    39937943n,
    0n,
  ],
  "240": [
    39937943n,
    0n,
  ],
  "241": [
    39937943n,
    0n,
  ],
  "242": [
    39937943n,
    0n,
  ],
  "243": [
    39937943n,
    0n,
  ],
  "244": [
    39937943n,
    0n,
  ],
  "245": [
    39937943n,
    0n,
  ],
  "246": [
    39937943n,
    0n,
  ],
  "247": [
    39937943n,
    0n,
  ],
  "248": [
    39937943n,
    0n,
  ],
  "249": [
    39937943n,
    0n,
  ],
  "250": [
    39937943n,
    0n,
  ],
}
`;
